--- a/src/main/webapp/pages/TodayInspections/TodayInspections.html
+++ b/src/main/webapp/pages/TodayInspections/TodayInspections.html
@@ -34,26 +34,25 @@
                         <wm-composite name="composite3" show="false">
                             <wm-label class="col-md-3 control-label" name="label4" caption="YesterdayDate"></wm-label>
                             <wm-container class="col-md-9" name="container3">
-                                <!--<wm-datetime name="datetimeYesterdayDate" datavalue="bind:selectedDay"></wm-datetime>-->
-                            </wm-container>
+                                <!--<wm-datetime name="datetimeYesterdayDate" datavalue="bind:selectedDay"></wm-datetime>--></wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow4">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn5">
-                        <wm-grid title="" dataset="bind:Variables.svTodayInspections.dataSet" navigation="Classic" name="grid1">
-                            <wm-grid-column binding="subdivision" caption="Subdivision" pcdisplay="true" mobiledisplay="true"></wm-grid-column>
-                            <wm-grid-column binding="fullAddress" caption="Full Address" pcdisplay="true" mobiledisplay="true"></wm-grid-column>
-                            <wm-grid-column binding="assignedToPersonName" caption="Assigned To Person Name" pcdisplay="true" mobiledisplay="true"></wm-grid-column>
-                            <wm-grid-column binding="assignedTo" caption="Assigned To" pcdisplay="true" mobiledisplay="true"></wm-grid-column>
-                            <wm-grid-column binding="lot" caption="Lot" pcdisplay="true" mobiledisplay="true"></wm-grid-column>
-                            <wm-grid-column binding="inspectionGuid" caption="Inspection Guid" pcdisplay="true" mobiledisplay="true"></wm-grid-column>
-                            <wm-grid-column binding="fullName" caption="Full Name" pcdisplay="true" mobiledisplay="true"></wm-grid-column>
-                            <wm-grid-column binding="outcome" caption="Outcome" pcdisplay="true" mobiledisplay="true"></wm-grid-column>
-                            <wm-grid-column binding="requestedFor" caption="Requested For" pcdisplay="true" mobiledisplay="true"></wm-grid-column>
-                            <wm-grid-column binding="inspectDesignName" caption="Inspect Design Name" pcdisplay="true" mobiledisplay="true"></wm-grid-column>
-                            <wm-grid-column binding="inspectionTitle" caption="Inspection Title" pcdisplay="true" mobiledisplay="true"></wm-grid-column>
-                            <wm-grid-column binding="inspectionZone" caption="Inspection Zone" pcdisplay="true" mobiledisplay="true"></wm-grid-column>
+                        <wm-grid title="" dataset="bind:Variables.svTodayInspections.dataSet" navigation="Classic" name="gridTodayInspections">
+                            <wm-grid-column binding="subdivision" caption="Subdivision" type="string" edit-widget-type="text" show="bind:Widgets.selectView.datavalue.viewName==='Contractor'" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="fullAddress" caption="Full Address" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="assignedToPersonName" caption="Assigned To Person Name" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="assignedTo" caption="Assigned To" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="lot" caption="Lot" type="string" edit-widget-type="text" show="bind:Widgets.selectView.datavalue.viewName==='Contractor'" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="inspectionGuid" caption="Inspection Guid" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="fullName" caption="Full Name" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="outcome" caption="Outcome" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="requestedFor" caption="Requested For" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="inspectDesignName" caption="Inspect Design Name" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="inspectionTitle" caption="Inspection Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="inspectionZone" caption="Inspection Zone" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                         </wm-grid>
                     </wm-gridcolumn>
                 </wm-gridrow>
