Tweaks and Counts for Yesterday.Today,Tomorrow Inspections New files added - [CountAssignedInspectionsBetweenDatesResponse.java,CountAssignedInspectionsLessThanDateResponse.java] Files modified - [MunicipalityInspections.html,QueryExecutionController.java,cx2-queries.hbm.xml,TomorrowInspections.js,MunicipalityInspections.js,YesterdayInspections.variables.json,TodayInspections.variables.json,Cx2QueryExecutorServiceImpl.java,MunicipalityInspections.variables.json,TodayInspections.js,TomorrowInspections.variables.json,YesterdayInspections.js,cx2_query.json,Cx2QueryExecutorService.java]

--- a/src/main/webapp/pages/MunicipalityInspections/MunicipalityInspections.html
+++ b/src/main/webapp/pages/MunicipalityInspections/MunicipalityInspections.html
@@ -28,7 +28,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn26" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Today" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.svCountTodayInspections.dataSet[$i].inspectionsCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -43,7 +43,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn21_1" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Tomorrow" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.svCountTomorrowInspections.dataSet[$i].inspectionsCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
@@ -58,7 +58,7 @@
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn27" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Yesterday" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="bind:Variables.svCountYesterdayInspections.dataSet[$i].inspectionsCount" fontsize="3" fontunit="em" class="p"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
