cleaned up breadcrumbs, page headers, and page titles for Today/Tomorrow/YesterdayInspections pages Files modified - [TodayInspections.variables.json,YesterdayInspections.html,TodayInspections.html,TomorrowInspections.variables.json,YesterdayInspections.js,YesterdayInspections.variables.json,TomorrowInspections.html]

--- a/src/main/webapp/pages/TomorrowInspections/TomorrowInspections.html
+++ b/src/main/webapp/pages/TomorrowInspections/TomorrowInspections.html
@@ -1,4 +1,4 @@
-<wm-page data-ng-controller="TomorrowInspectionsPageController" pagetitle="Tomorrow Inspections" name="page1">
+<wm-page data-ng-controller="TomorrowInspectionsPageController" pagetitle="Tomorrow's Inspections" name="page1">
     <wm-header content="header" name="header1"></wm-header>
     <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
     <wm-content name="content1">
@@ -12,7 +12,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow17">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn29" padding="2em unset">
-                        <wm-label caption="Tomorrow Inspections" fontweight="bold" name="label2" class="h4"></wm-label>
+                        <wm-label caption="Tomorrow's Inspections" fontweight="bold" name="label2" class="h4"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn30" padding="2em unset">
                         <wm-composite name="composite1" show="true">
