Edit Inspection- "Letters" Files modified - [EditInspection.js,EditForm.html,EditInspection.html,EditForm.variables.json,EditInspection.variables.json]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -709,7 +709,7 @@
                             </wm-tabpane>
                             <wm-tabpane name="tabpaneLetters" title="Letters">
                                 <wm-livegrid formlayout="dialog" name="livegridLetters">
-                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="Lettertemplates List" dataset="bind:Variables.lvLetterTemplatesData.dataSet" navigation="Classic" name="gridLetters">
+                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvLetterTemplatesData.dataSet" navigation="Classic" name="gridLetters">
                                         <wm-grid-column binding="letterTitle" caption="Letter Title" type="string" generator="assigned" mobiledisplay="false" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                         <wm-grid-column binding="createdDate" caption="Created Date" type="datetime" generator="assigned" readonly="true" datepattern="MM-dd-yyyy hh:mm a" formatpattern="toDate" edit-widget-type="datetime"
                                         show="true"></wm-grid-column>
